applications/windows-os/5-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: windows
  namespace: windos-os
  annotations:
    cert-manager.io/cluster-issuer: windows-production
    external-dns.alpha.kubernetes.io/hostname: windows.almahrizi.net
spec:
  ingressClassName: external-nginx
  rules:
    - host: windows.almahrizi.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: windows
                port:
                  number: 3000
  tls:
    - hosts:
        - windows.almahrizi.net
      secretName: windows-almahrizi-net
